# Proyecto_Web_Classification_Tool

./: README.md  docker-compose.yaml
backend/: Dockerfile  api_expose.sh  main.py  pyproject.toml  run.sh
backend/app/: api.py
backend/app/funtions/: __init__.py  mlflow_call.py  text_extraction.py
backend/app/models/: __init__.py
backend/app/routers/: __init__.py  web_classifier.py
backend/mlflow/: Dockerfile  main.py  prueba.py  pyproject.toml
backend/mlflow/funtions/: __init__.py  extraccion_text.py  funtions.py  prueba.py
frontend-streamlit/: .env  Dockerfile  home.py  prueba.py  pyproject.toml
frontend-streamlit/app/services/: pushtext.py
