[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["JD12"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.90.1"
uvicorn = "^0.20.0"
fastapi-utils = "^0.2.1"
pydantic = "^1.10.4"
python-multipart = "^0.0.5"
python-decouple = "^3.7"
requests = "^2.28.2"
pillow = "^9.4.0"
#psycopg2-binary = "^2.9.5"
google-cloud-storage = "^2.7.0"
psycopg2-binary = "^2.9.5"
tensorflow = "^2.11.0"
bs4 = "^0.0.1"
spacy = "^3.5.1"
pandas = "^1.5.3"
lxml = "^4.9.2"
sklearn = "^0.0.post1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
