[tool.poetry]
name = "mlflow"
version = "0.1.0"
description = ""
authors = ["Jd12"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = ">=1.23.5,<=1.24.2"
scipy = "^1.10.1"
pandas = "^1.5.3"
seaborn = "^0.12.2"
matplotlib = "^3.7.0"
kaggle = "^1.5.13"
nltk = "^3.8.1"
imbalanced-learn = "^0.10.1"
beautifulsoup4 = "^4.11.2"
spacy = "^3.5.1"
lxml = "^4.9.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
